# cake_bear

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/cakec-ast/: Cargo.toml
crates/cakec-ast/src/: lib.rs
crates/cakec-cli/: Cargo.toml
crates/cakec-cli/src/: main.rs
crates/cakec-codegen/: Cargo.toml
crates/cakec-codegen/src/: lib.rs
crates/cakec-ir/: Cargo.toml
crates/cakec-ir/src/: lib.rs
crates/cakec-lexer/: Cargo.toml
crates/cakec-lexer/src/: lib.rs  tests.rs
crates/cakec-parser/: Cargo.toml
crates/cakec-parser/src/: lib.rs
crates/cakec-runtime/: Cargo.toml
crates/cakec-runtime/src/: lib.rs
crates/cakec-sema/: Cargo.toml
crates/cakec-sema/src/: lib.rs
examples/basic/: main.ts
scripts/: check-line-limit.py
