[workspace]
resolver = "2"
members = [
    "crates/cakec-cli",
    "crates/cakec-ast",
    "crates/cakec-lexer",
    "crates/cakec-parser",
    "crates/cakec-sema",
    "crates/cakec-ir",
    "crates/cakec-codegen",
    "crates/cakec-runtime",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT"
repository = "https://github.com/zobstory/cake_bear"
rust-version = "1.66"

[workspace.dependencies]
cakec-ast     = { path = "crates/cakec-ast" }
cakec-lexer   = { path = "crates/cakec-lexer" }
cakec-parser  = { path = "crates/cakec-parser" }
cakec-sema    = { path = "crates/cakec-sema" }
cakec-ir      = { path = "crates/cakec-ir" }
cakec-codegen = { path = "crates/cakec-codegen" }
cakec-runtime = { path = "crates/cakec-runtime" }
